CSS: prevent label wrap over multiple lines.

--- a/src/components/Shared/Date/date.module.scss
+++ b/src/components/Shared/Date/date.module.scss
@@ -14,6 +14,7 @@
 		font-weight: bold;
 		margin-right: 0.5rem;
 		font-size: $label-font-size;
+		white-space: nowrap;
 	}
 
 	& select[type="date"] {
