--- a/src/components/Shared/Textarea/textarea.module.scss
+++ b/src/components/Shared/Textarea/textarea.module.scss
@@ -20,5 +20,6 @@
 		font-weight: bold;
 		margin-right: 0.5rem;
 		font-size: $label-font-size;
+		white-space: nowrap;
 	}
 }
